--- a/source/partials/_nav.html.erb
+++ b/source/partials/_nav.html.erb
@@ -32,6 +32,9 @@
         <li>
         <%= link_to 'ASPN', '/aspn/' %>
         </li>
+        <li>
+        <%= link_to 'Standings', '/standings/' %>
+        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
