--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,10 +4,13 @@ layout: "layout"
 <!-- Intro Header -->
 <header class="intro">
   <div class="intro-body">
-    <%= partial "/partials/upcoming_shows", locals: {limit: 9} %>
-    <h3><%= link_to "Full Schedule Here", "/shows" %></h3>
+    <%= partial "/partials/upcoming_shows", locals: { limit: 9 } %>
+    <h3><%= link_to "Full Schedule", "/shows" %></h3>
   </div>
 </header>
 
-<hr/>
-<%= partial "/partials/previous_shows" %>
+  <hr/>
+  <section class="prev-shows">
+    <%= partial "/partials/previous_shows", locals: { limit: 9 } %>
+    <h3><%= link_to "All Results", "/shows" %></h3>
+  </section>
