--- a/source/partials/_previous_shows.html.erb
+++ b/source/partials/_previous_shows.html.erb
@@ -5,8 +5,10 @@
     </div>
   </div>
   <div class="upcoming-shows center-block">
+    <% count = 0 %>
     <% data.shows.sort_by{|s| s[0]}.reverse.each do |show| %>
-      <% unless show[1].scores.nil? %>
+      <% if !show[1].scores.nil? && count < limit %>
+        <% count = count + 1 %>
         <div class="col-md-6 col-lg-4 ">
           <div class="match-box done <%= show[1]['location'] %>">
             <div class="names">
